Refactor code structure for improved readability and maintainability

--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ APP_KEY="Service security key"
 # IMEIs de los dispositivos
 IMEI_A="Device IMEI"
 IMEI_V="Device IMEI"
+IMEI_B="Bracelet IMEI"
 
 # Rutas de los archivos de coordenadas
-DATA_PATH_V="./data/coordinates_V.xlsx"
-DATA_PATH_A="./data/coordinates_A.xlsx"
+DATA_PATH="./data
 
 # Parámetros del mensaje
 SENDER="Intellicare"
@@ -17,4 +17,21 @@ BATTERY_B="80.0"
 TEMP_B="36.0"
 EVENT_TYPE="CYC"
 ALTITUDE="69"
+
+# Parámetros del mensaje JSON (brazalete)
+JSON_WIFI="-54 62b15f962a95,-54 66b15f962a95,-55 5cb15f962a95,-67 5cb15f903179,-67 62b15f903179"
+JSON_RSSI="-73"
+JSON_MNC="1"
+JSON_SW="V1.16"
+JSON_RSRP="-84"
+JSON_ACL="0"
+JSON_MCC="214"
+JSON_TA="261"
+JSON_HW="V1.03"
+JSON_CT="1"
+JSON_RSRQ="-10"
+JSON_SNR="147"
+JSON_CID="73753919"
+
+# Intervalo de envío
 REQUEST_INTERVAL="15"
